plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.0'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.graphify'
version = '0.1.0'
sourceCompatibility = '21'
targetCompatibility = '21'

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Database
    implementation 'org.postgresql:postgresql:42.7.1'
    implementation 'org.flywaydb:flyway-core:9.22.3'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    // Neo4j
    implementation 'org.springframework.boot:spring-boot-starter-data-neo4j'

    // Utility
    compileOnly 'org.projectlombok:lombok:1.18.38'
    annotationProcessor 'org.projectlombok:lombok:1.18.38'
    implementation 'com.google.guava:guava:32.1.3-jre'
    implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.7.0'
    implementation 'org.apache.tika:tika-core:2.9.2'
    implementation 'org.apache.tika:tika-parsers-standard-package:2.9.2'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'junit:junit:4.13.2'
}

tasks.named('compileJava') {
    options.compilerArgs << '-parameters'
    options.fork = true
    options.forkOptions.jvmArgs = ['--enable-native-access=ALL-UNNAMED']
}

tasks.named('test') {
    useJUnitPlatform()
}

bootRun {
    args = ['--spring.profiles.active=dev']
}
